<resources>
    <string name="app_name">SDV Editor</string>
    <string name="refresh_remote_sdv_files">refresh original</string>
    <string name="refresh_local_sdv_files">refresh copies</string>
    <string name="copy_from_sdv_to_local">fetch \u2B07</string>
    <string name="copy_to_sdv_from_local">push \u2B06</string>
    <string name="edit_local">edit</string>
    <string name="delete_local">delete</string>
    <string name="editor_header">SDV Editor</string>
    <string name="save_changes">save changes \u2714</string>
    <string name="cancel_editing">cancel \u2715</string>

    <string name="property_name">property</string>
    <string name="property_original">original</string>
    <string name="property_editor">edit</string>

    <string name="confirm_deletion_title">Confirm deletion</string>
    <string name="confirm_deletion_message">Really delete Savegame?</string>
    <string name="confirm_deletion_confirm">CONFIRM!</string>

    <string name="confirm_copy_title">Savegame already exists!</string>
    <string name="confirm_copy_message">This Savegame already exists local! What would you like to do?</string>
    <string name="confirm_copy_overwrite">OVERWRITE!</string>
    <string name="confirm_copy_increase_index">COPY!</string>

    <string name="cancel_editing_title">Confirm abort editing</string>
    <string name="cancel_editing_message">Really abort editing Savegame? All unsaved changes will be lost!</string>
    <string name="cancel_editing_confirm">YES - ABORT!</string>

    <string name="confirm_save_changes_title">Confirm save changes</string>
    <string name="confirm_save_changes_message">Really save changes? This operation can not be undone!</string>
    <string name="confirm_save_changes_confirm">YES - SAVE!</string>

</resources>