<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

    <Button
            android:text="@string/refresh_remote_sdv_files"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/refresh_remote_sdv_files"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="183dp"
            android:layout_height="147dp"
            android:id="@+id/remote_sdv_files"
            app:layout_constraintTop_toBottomOf="@+id/refresh_remote_sdv_files"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent">
    </androidx.recyclerview.widget.RecyclerView>
    <TextView
            android:layout_width="183dp"
            android:layout_height="147dp"
            android:id="@+id/sdv_file_info"
            app:layout_constraintStart_toEndOf="@+id/remote_sdv_files"
            app:layout_constraintTop_toBottomOf="@+id/refresh_remote_sdv_files"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/refresh_local_sdv_files"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/refresh_local_sdv_files"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/remote_sdv_files"
            android:layout_marginTop="8dp" />
    <Button
            android:text="@string/copy_from_sdv_to_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/copy_from_remote_to_local"
            app:layout_constraintTop_toBottomOf="@+id/remote_sdv_files"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/refresh_local_sdv_files"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/copy_to_sdv_from_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/copy_to_remote_from_local"
            app:layout_constraintTop_toBottomOf="@+id/remote_sdv_files"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/copy_from_remote_to_local"
            android:layout_marginStart="8dp"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="183dp"
            android:layout_height="147dp"
            android:id="@+id/local_sdv_files"
            app:layout_constraintTop_toBottomOf="@+id/copy_from_remote_to_local"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="183dp"
            android:layout_height="147dp"
            android:id="@+id/local_file_info"
            app:layout_constraintTop_toBottomOf="@+id/copy_from_remote_to_local"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/local_sdv_files"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/edit_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_local"
            app:layout_constraintTop_toBottomOf="@+id/local_sdv_files"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/delete_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/delete_local"
            app:layout_constraintStart_toEndOf="@+id/edit_local"
            app:layout_constraintTop_toBottomOf="@+id/local_sdv_files" android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="377dp"
            android:layout_height="229dp"
            android:id="@+id/console"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_local"
            android:layout_marginTop="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>